--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-spinners": "^0.12.0"
