--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
-    "react-spinners": "^0.12.0",
-    "webpack": "^5.73.0"
+    "react-spinners": "^0.12.0"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
