--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.2",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
@@ -13,7 +20,9 @@
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
-    "react-spinners": "^0.12.0"
+    "react-spinners": "^0.12.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
